syntax = "proto3";

option csharp_namespace = "CompaniesRpc";

package greet;

import "google/protobuf/timestamp.proto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc GetCustomers (CustomerRequest) returns (CustomerReply);
}

// The request message containing the user's name.
message CustomerRequest {
	string searchText = 1;
}

// The response message containing the greetings.
message CustomerReply {
  repeated CustomerRpc customers = 1;
}

message CustomerRpc {
	string id = 1;
	string firstName = 2;
	string lastName = 3;
	string emailAddress = 4;
	string organisationId = 5;
	google.protobuf.Timestamp latestConnectedOn = 6;
	google.protobuf.Timestamp lastedInvitedOn = 7;
}